# SnakeGameServer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
TwoClientRooms/include/: ICore.h  WSManager.h
TwoClientRooms/src/: WSManager.cpp
include/: ICore.h  ServerCore.h  ServerPTR.h  SimpleMsgSender.h  Snake.h  SnakeGame.h  SnakeServer.h  WSManager.h  gamecodes.h  utils.h
src/: ServerCore.cpp  Snake.cpp  SnakeServer.cpp  WSManager.cpp
